bug: 40211
reverted changes due to UI overlapping in Phone browser

http://bugzilla.zimbra.com/show_bug.cgi?id=40211

Copied from Perforce
 Change: 213705

--- a/WebRoot/css/iphone.css
+++ b/WebRoot/css/iphone.css
@@ -491,6 +491,7 @@ select {
 }
 
 .zo_select_button {
+    width: 85px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
